--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 body{
+    margin: 0;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
 }
 h1 {
@@ -18,3 +20,9 @@ h1 {
 .half-width img{
     width: 100%;
 }
+
+section{
+    height: 500px;
+    background-image:url('images/top-banner.png');
+    background-repeat: no-repeat;
+}   
