--- a/style.css
+++ b/style.css
@@ -15,14 +15,66 @@ h1 {
     width: 40%;
     float: left;
     margin-left: 5%;
-    padding-left:5%;
+    padding-left:2%;
 }
 .half-width img{
     width: 100%;
 }
-
 section{
+    margin-bottom:50px;
     height: 500px;
+}
+
+.top-banner{
     background-image:url('images/top-banner.png');
     background-repeat: no-repeat;
 }   
+
+.button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, red, orange);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white; 
+    transition:all .8s ease;
+}
+.button:hover{
+    background-image: linear-gradient(45deg, orange, red);
+}
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    height: 70%; 
+    border-radius: 5px;
+   background-color: white;
+   transition: all .3s ease;
+}
+
+#full-stack{
+    border-left: 5px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+.single-experience:hover{
+    box-shadow: 2px 2px 20px gray; 
+}
+
+.experience-area{
+    background-image: url('images/exp-bg.png');
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+footer p{
+    text-align: center;
+}
